# 1-sem-tp

./: .README.md.swp  .gitignore  CMakeLists.txt  Makefile  README.md  db.sqlite3  main.out  manage.py  remove_comments.cpp
AskPupkin/: apps.py  forms.py  funcs.py  models.py  views.py
AskPupkin/management/commands/: do_faker.py
AskPupkin/migrations/: 0001_initial.py  0002_auto_20181105_1431.py  0003_auto_20181106_0924.py  0004_auto_20181106_1321.py  0005_auto_20181106_1355.py
css/: base.css  style.css
linters/: run.sh
project/include/: CArcGraph.hpp  CListGraph.hpp  CMatrixGraph.hpp  CSetGraph.hpp  Generator.h  GraphGen.hpp  IGraph.hpp
project/src/: 1-1.cpp  1-3.cpp  1__.cpp  2-2.cpp  2-3.cpp  2.cpp  2__.cpp  3-2.cpp  3.cpp  4-2.cpp  4-3.cpp  5-1.cpp  6-4.cpp  7-3.cpp  CArcGraph.cpp  CListGraph.cpp  CMatrixGraph.cpp  CSetGraph.cpp  Generator.cpp  GraphGen.cpp  main.c  main.cpp  main_2.cpp  main_lion.c  test.cpp
project/templates/: ask.html  base.html  base_log.html  forms.html  index.html  login.html  project_templates_forms.html  question.html  signup.html  usr_settings.html
static/css/: base.css
templates/: ask.html  base.html  base_log.html  forms.html  index.html  index_by_tag.html  login.html  paginator.html  question.html  signup.html  usr_settings.html
tp_1_sem/: settings.py  urls.py  wsgi.py
